Fix missing flags